fixed a little bit the implementation for system:env and system:properties and hot reload; needs more rework.
minor refactoring, removed deprecated warning introduced by Java9